--- a/contact.html
+++ b/contact.html
@@ -32,13 +32,13 @@
             <h3>Visitor</h3>
             <form onsubmit="displayThankYou()" method="post">
                 Name:
-                <input type="text" id="name" size="15"><br>
+                <input type="text" id="name" size="15" required><br>
                 Address:
-                <input type="text" id="address" size="15"><br>
+                <input type="text" id="address" size="15" required><br>
                 Phone:
-                <input type="text" id="phone" size="15"><br>
+                <input type="tel" id="phone" size="15" required><br>
                 Email:
-                <input type="text" id="email" size="15"><br><br>
+                <input type="text" id="email" size="15" required><br><br>
                 Comments           
                 <br>
                 <textarea rows="5" cols="25" name="comment">
