--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
 
         <section>
             <h3>Visitor</h3>
-            <form onsubmit="displayThankYou()" method="post">
+            <form action="/mail" onsubmit="displayThankYou()" method="post">
                 Name:
                 <input type="text" id="name" size="15" required><br>
                 Address:
