--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
 
         <section>
             <h3>Visitor</h3>
-            <form action="/mail" onsubmit="displayThankYou()" method="post">
+            <form action="form_data.php" onsubmit="displayThankYou()" method="post">
                 Name:
                 <input type="text" id="name" size="15" required><br>
                 Address:
@@ -38,7 +38,7 @@
                 Phone:
                 <input type="tel" id="phone" size="15" required><br>
                 Email:
-                <input type="text" id="email" size="15" required><br><br>
+                <input type="text" id="email" size="15" placeholder="youremail@organization.com"required><br><br>
                 Comments           
                 <br>
                 <textarea rows="5" cols="25" name="comment">
