--- a/contact.html
+++ b/contact.html
@@ -32,13 +32,13 @@
             <h3>Visitor</h3>
             <form action="/mail" onsubmit="displayThankYou()" method="post">
                 Name:
-                <input type="text" id="name" size="15" required><br>
+                <input type="text" name="name" size="15" required><br>
                 Address:
-                <input type="text" id="address" size="15" required><br>
+                <input type="text" name="address" size="15" required><br>
                 Phone:
-                <input type="tel" id="phone" size="15" required><br>
+                <input type="tel" name="phone" size="15" required><br>
                 Email:
-                <input type="text" id="email" size="15" placeholder="youremail@organization.com"required><br><br>
+                <input type="text" name="email" size="15" placeholder="youremail@organization.com"required><br><br>
                 Comments           
                 <br>
                 <textarea rows="5" cols="25" name="comment">
